Fix camera overflow
Added styles to avoid camera image overflow from parent container.

--- a/src/App.css
+++ b/src/App.css
@@ -4,64 +4,91 @@
 	font-family: "Montserrat", sans-serif;
 }
 
-body{
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    background: url('/src/assets/img/Fondo.jpg') center center/cover no-repeat fixed;
-    font-family: sans-serif;
-    align-items: center;
+body {
+	margin: 0;
+	padding: 0;
+	overflow: hidden;
+	background: url("/src/assets/img/Fondo.jpg") center center/cover no-repeat fixed;
+	font-family: sans-serif;
+	align-items: center;
 	justify-content: center;
-  }
-  .header{
-    display: flex;
-    height: 80px;
-    background: linear-gradient(to bottom, #5E1DE5, #1A5AE6);
-    justify-content: center;
-    align-items: center;
-	text-align: center;
-    padding: 10px;
-    box-shadow: 0 10px 10px rgba(70, 2, 230, 0.2);
-    transition: height 0.5s, box-shadow 0.5s;
-  }
-  .header:hover {
-    height: 85px; 
-    box-shadow: 0 4px 10px rgba(255, 255, 255, 0.4); 
 }
-  .TituloTxt{
-    color: white;
+.header {
+	display: flex;
+	height: 80px;
+	background: linear-gradient(to bottom, #5e1de5, #1a5ae6);
+	justify-content: center;
+	align-items: center;
 	text-align: center;
-  }
-  .Contenedor{
-    background: linear-gradient(45deg, #6510E5, #1100E6);
-    margin: 2%;
-    padding: 15px;
-    border-radius: 20px;
-    box-shadow: 5px 5px 10px rgba(112, 2, 230, 0.5);
+	padding: 10px;
+	box-shadow: 0 10px 10px rgba(70, 2, 230, 0.2);
+	transition: height 0.5s, box-shadow 0.5s;
+}
+.header:hover {
+	height: 85px;
+	box-shadow: 0 4px 10px rgba(255, 255, 255, 0.4);
+}
+.TituloTxt {
+	color: white;
+	text-align: center;
+}
+.Contenedor {
+	background: linear-gradient(45deg, #6510e5, #1100e6);
+	margin: 2%;
+	padding: 15px;
+	border-radius: 20px;
+	box-shadow: 5px 5px 10px rgba(112, 2, 230, 0.5);
 	grid-area: camera;
-	width: 90%;
-    transition: transform 0.7s, box-shadow 0.7s;
-  }.Contenedor:hover{
-    transform: scale(1.02);
-    box-shadow: 8px 8px 10px rgba(255, 255, 255, 0.6);
-  }
-  .Contenedor h3{
-    color: white;
-  }
-  .Contenedor button{
-	color:white;
-	background-color: #8E03EB;
+	width: 95%;
+	max-width: 500px;
+	height: fit-content;
+	min-height: 600px;
+	transition: transform 0.7s, box-shadow 0.7s;
+	justify-content: center;
+}
+.Contenedor:hover {
+	transform: scale(1.02);
+	box-shadow: 8px 8px 10px rgba(255, 255, 255, 0.6);
+}
+.Contenedor h3 {
+	color: white;
+}
+
+.Contenedor p {
+	color: white;
+	text-align: center;
+	margin: 2%;
+}
+
+.Contenedor div {
+	max-width: 100%;
+}
+
+.Contenedor button {
+	color: white;
+	background-color: #8e03eb;
 	border: 0px;
 	padding: 10px;
 	margin-top: 2%;
 	border-radius: 5px;
 	transition: background-color 0.7s, border 0.5s;
-  }
-  .Contenedor button:hover{
-	background-color:#EB0258;
-  }.Contenedor button:active{
+}
+
+.Contenedor img {
+	max-width: 100%; /* Asegura que la imagen no sea más ancha que el contenedor */
+	height: auto; /* Mantiene la proporción de la imagen */
+	display: block; /* Asegura que la imagen no tenga espacio blanco adicional debajo de ella */
+	border-radius: 0.6rem;
+	margin-top: 4%;
+	margin-bottom: 5%;
+}
+
+.Contenedor button:hover {
+	background-color: #eb0258;
+}
+.Contenedor button:active {
 	border: solid 1px white;
-  }
+}
 .card {
 	padding: 2em;
 }
@@ -76,30 +103,31 @@ body{
 	grid-template-columns: repeat(auto-fill, minmax(500px, 1fr));
 	grid-template-rows: auto;
 	width: 100%;
+	min-width: 600px;
 	height: auto;
 }
 .flex-container {
 	display: flex;
-	justify-content: center; 
+	justify-content: center;
 	align-items: center;
-	max-width: 75%;
+	max-width: 90%;
 	margin: auto;
 }
 
 .info-database {
-	background-color: #2B99EB;
+	background-color: #2b99eb;
 	margin-top: 2%;
-    padding: 15px;
-    border-radius: 20px;
+	padding: 15px;
+	border-radius: 20px;
 	border: 0;
-    box-shadow: 5px 5px 10px rgba(112, 2, 230, 0.5);
-	min-height: 400px;
-	height: auto;
+	box-shadow: 5px 5px 10px rgba(112, 2, 230, 0.5);
+	min-height: 600px;
+	height: fit-content;
 	width: 100%;
 	transition: border 0.7s, box-shadow 0.7s;
 }
-.info-database:hover{
-    box-shadow: 8px 8px 10px rgba(255, 255, 255, 0.6);
+.info-database:hover {
+	box-shadow: 8px 8px 10px rgba(255, 255, 255, 0.6);
 }
 
 .chart {
